# Serial

./: .gitmodules  CMakeLists.txt  README.md
inc/Henry/: Serial.hpp
include/HENRY/: serial.hpp
include/serial/: serial.hpp
src/: CMakeLists.txt  LinuxSerial.cpp  Serial.hpp  linux_serial.cpp
src/plat/: LinuxSerial.cpp  WindowsSerial.cpp
src/plat/linux/: linux_serial.cpp  serial.cpp
src/plat/macos/: serial.cpp
src/plat/windows/: windows_serial.cpp
test/: CMakeLists.txt  master_test.cpp
tests/: CMakeLists.txt  master_test.cpp
